Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-118089

Enums exposed to QML seem only working when the QML code gets compiled by qmlsc

XMLWordPrintable

    • Windows
    • 1ba14d58e (dev), 89a3cca1e (6.6), 68774c8d7 (tqtc/lts-6.5), 5d1d8eef8 (tqtc/lts-6.2)

      Hi,

      It seems if my QML code using enum exposed to QML does not get compiled by qmlsc, then enum is undefined. Is this expected behavior?

      See the attached example:

      • using only import QtQuick.Controls instead of import QtQuick.Controls.Basic, then I cannot use the enums in onClicked of Button.
      • if I put NO_CACHEGEN option in qt_add_qml_module() then all enums are undefined.

      Thanks.

      QmlEnum.zip

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ulherman Ulf Hermann
            pijaouen Pierre Jaouen
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes